--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Eat Da Burger</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="css/burger_styles.css" type='text/css'>
+  <link rel="stylesheet" href="assets/css/burger_styles.css" type='text/css'>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rammetto One"  type="text/css"/>
 
 </head>
