--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,7 +18,7 @@
                        <h5>{{this.burger_name}}</h5>
                      </div>
                      <div class="col-sm-2">
-                       <button id={{this.id}} class="btn btn-smash"> Smash </button>
+                       <button id={{this.id}} class="btn btn-smash smash"> Smash </button>
                      </div>
                   </div>
                   {{/each}}
