--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="assets/css/burger_styles.css" type='text/css'>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rammetto One"  type="text/css"/>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="assets/javascript/app.js"></script>
+    
 </head>
 <body>
   {{{ body }}}
